xmodem mostly working

--- a/STM32H743_Bootloader/Debug/makefile
+++ b/STM32H743_Bootloader/Debug/makefile
@@ -54,8 +54,7 @@ STM32H743_Bootloader.list \
 
 
 # All Target
-all:
-	+@$(MAKE) --no-print-directory main-build && $(MAKE) --no-print-directory post-build
+all: main-build
 
 # Main-build Target
 main-build: STM32H743_Bootloader.elf secondary-outputs
@@ -81,10 +80,6 @@ clean:
 	-$(RM) STM32H743_Bootloader.elf STM32H743_Bootloader.list STM32H743_Bootloader.map default.size.stdout
 	-@echo ' '
 
-post-build:
-	arm-none-eabi-objcopy -O ihex STM32H743_Bootloader.elf STM32H743_Bootloader.hex
-	-@echo ' '
-
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
 
 fail-specified-linker-script-missing:
@@ -94,6 +89,6 @@ fail-specified-linker-script-missing:
 warn-no-linker-script-specified:
 	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
 
-.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified post-build
+.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified
 
 -include ../makefile.targets
