--- a/STM32H743_Bootloader/Debug/makefile
+++ b/STM32H743_Bootloader/Debug/makefile
@@ -52,6 +52,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 STM32H743_Bootloader.list \
 
+OBJCOPY_BIN += \
+STM32H743_Bootloader.bin \
+
 
 # All Target
 all: main-build
@@ -75,12 +78,17 @@ STM32H743_Bootloader.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_
 	@echo 'Finished building: $@'
 	@echo ' '
 
+STM32H743_Bootloader.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "STM32H743_Bootloader.bin"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
-	-$(RM) STM32H743_Bootloader.elf STM32H743_Bootloader.list STM32H743_Bootloader.map default.size.stdout
+	-$(RM) STM32H743_Bootloader.bin STM32H743_Bootloader.elf STM32H743_Bootloader.list STM32H743_Bootloader.map default.size.stdout
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
